2007-03-26  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-03-03
	* important bug fixes!

2007-03-24  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-03-02
	* fix waitRecoRead() and waitDqmRead()

2007-03-22  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-03-01
	* implement nice suggestion from Markus to have raw event cells
	properly discarded regardless of the event being selected or
	rejected.
	* fix to the discard chain for data events being acknowledged by
	the SM
	

2007-03-21  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-03-00
	* if I had a nickel for every change I made ...

2007-03-19  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-02-00
	* new API
	* remove class FUShmBufferCell
	* add classes FUShmRawCell, FUShmRecoCell, and FUShmDqmCell
	* add 'segmentationMode' flag, indicating if the buffer should be
	layout as one large shared memory segment ('false') or if each
	cell should be allocated in its own segment ('true').

2007-03-11  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-01-00
	* remove option 'ownsMemory': before, a FUShmBuffer[Cell] could be
	constructed in regular memory. Not anymore!
	* there should be no use case for this anymore, but if (?!)
	anybody would ever be tempted to construct a FUShmBufferCell
	outside the static accessors of FUShmBuffer, it *must* be via a
	'placement new': cell = new (addr) FUShmBufferCell(..), where addr
	better point to a valid chunk of shared memory. DON'T DO IT!
	* fixed typo in API: shm_dettach -> shm_detach (spotted by
	Emilio:)

2007-03-11  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-00-01
	* first import into CVS
	* the classes FUShmBuffer and FUShmBufferCell are being transfered
	from the EventFilter/ResourceBroker package, from which they are
	being removed.
	* The EventFilter/ResourceBroker/bin content is being transfered